# opt-out

./: .gitignore  Cargo.toml  Dockerfile
admin/: Cargo.toml
admin/src/: main.rs
migrations/: 20240318171953_create_opt_out_table.sql  20240318180915_create_user_table.sql  20240319024015_rename_password_to_password_hash.sql
src/: main.rs
templates/: add_opt_out_user.html  edit_opt_out_user.html  login.html  opt_out_users.html  opt_out_users_list.html
