[workspace]
members = [
    ".",
    "admin",
]

[package]
name = "leaf-opt-out"
version = "0.1.0"
edition = "2021"
default-run = "leaf-opt-out"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.78"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie", "cookie-signed"] }
base64 = "0.22.0"
cookie = "0.18.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
headers = "0.4.0"
log = "0.4.21"
password-hash = "0.5.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "offline"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
tower-cookies = "0.10.0"
tower-http = { version = "0.3", features = ["auth"] }


[[bin]]
name = "leaf-opt-out"
path = "src/main.rs"

[[bin]]
name = "admin"
path = "admin/src/main.rs"


