[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
argon2 = "0.4"
password-hash = "0.4"
dotenv="0.15.0"
env_logger = "0.11.3"
log="*"

[[bin]]
name = "admin"
path = "src/main.rs"
